<?xml version="1.0"?>
<package>
  <name>mjpeg_network_camera</name>
  <version>0.0.0</version>
  <description>ROS driver for mjpeg network cameras such as the Kodak SP360.</description>
  <maintainer email="zyan@lincoln.ac.uk">Zhi Yan</maintainer>
  <author>Chad Rockey</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
